<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/iv_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5FAD9"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_notification"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:text="@string/main_notification"
        android:textAllCaps="false"
        android:textColor="#9E0F4247"
        android:textColorHighlight="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold|italic"
        android:verticalScrollbarPosition="right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066" />

    <Button
        android:id="@+id/redBtn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="@string/high_risk"
        app:backgroundTint="#ED1A1A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.339" />

    <Button
        android:id="@+id/yellowBtn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="@string/alert_only"
        android:textColor="#191414"
        app:backgroundTint="#FFEB3B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.674"
        tools:text="Alert Only" />

    <Button
        android:id="@+id/addcontactBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/add_contacts"
        app:backgroundTint="#00BCD4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/aboutBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.859" />

    <Button
        android:id="@+id/aboutBtn"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="14dp"
        android:text="@string/about"
        app:backgroundTint="#009688"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.956" />

    <Button
        android:id="@+id/tipsBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/tips"
        app:backgroundTint="#009688"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.959" />

   <!-- <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imagetest"
        app:layout_constraintBottom_toTopOf="@+id/redBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/main_notification"
        tools:srcCompat="@tools:sample/avatars" /> -->

    <Button
        android:id="@+id/btn_personal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/personal_details"
        app:backgroundTint="#00BCD4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/addcontactBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.859" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/ignore"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/redBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_notification"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>